--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 endorsed.javafx.ant.classpath=.
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe
-user.properties.file=C:\\Users\\Laboratorio\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\jpvs0\\AppData\\Roaming\\NetBeans\\26\\build.properties
